Apply patch. rdar://problem/106142457

REGRESSION iOS 16.4 beta selects ultra-wide for facingMode: environment
    https://bugs.webkit.org/show_bug.cgi?id=253186
    rdar://problem/106142457

    Reviewed by Jer Noble.

    For ultra wide back cameras, add a zoomn factor of 2 so that a zoom of 1 corresponds to a standard FOV.
    We compute this factor once and we then divide by this factor for capabilities and multiply by this factor for settings.
    Manually tested on device.

    * Source/WebCore/platform/mediastream/mac/AVVideoCaptureSource.h:
    * Source/WebCore/platform/mediastream/mac/AVVideoCaptureSource.mm:
    (WebCore::AVVideoCaptureSource::computeMinZoom const):
    (WebCore::AVVideoCaptureSource::computeMaxZoom const):
    (WebCore::cameraZoomScaleFactor):
    (WebCore::AVVideoCaptureSource::AVVideoCaptureSource):
    (WebCore::AVVideoCaptureSource::setFrameRateAndZoomWithPreset):
    (WebCore::AVVideoCaptureSource::generatePresets):
    (WebCore::computeMaxZoom): Deleted.

    Canonical link: https://commits.webkit.org/261877@main

Identifier: 259548.393@safari-7615.1.26.11-branch