Source/WebCore/platform/mediastream/mac/AVVideoCaptureSource.h
@@ -119,6 +119,9 @@ private:
     void updateVerifyCapturingTimer();
     void verifyIsCapturing();
 
+    std::optional<double> computeMinZoom() const;
+    std::optional<double> computeMaxZoom(AVCaptureDeviceFormat*) const;
+
     RefPtr<VideoFrame> m_buffer;
     RetainPtr<AVCaptureVideoDataOutput> m_videoOutput;
     std::unique_ptr<ImageTransferSessionVT> m_imageTransferSession;
@@ -138,6 +141,8 @@ private:
     RetainPtr<AVFrameRateRange> m_appliedFrameRateRange;
 
     double m_currentFrameRate;
+    double m_currentZoom { 1 };
+    double m_zoomScaleFactor { 1 };
     bool m_interrupted { false };
     bool m_isRunning { false };
 
